--- a/cart-dev.yml
+++ b/cart-dev.yml
@@ -4,12 +4,11 @@ spring:
   application:
     name: cart-service
   redis:
-    host: 192.168.19.121
+    host: 127.0.0.1
   rabbitmq:
-    virtual-host: /leyou
-    username: /leyou
-    password: leyou
-    host: 192.168.19.121
+    username: guest
+    password: guest
+    host: localhost
 eureka:
   client:
     service-url:
@@ -39,4 +38,4 @@ hystrix:
 leyou:
   jwt:
     cookieName: LY_TOKEN
-    pubKeyPath: G:\\tmp\\rsa\\rsa.pub # 公钥地址
+    pubKeyPath: /home/web/rsa.pub # 公钥地址
