--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -4,10 +4,9 @@ spring:
   application:
     name: api-gateway
   rabbitmq:
-    virtual-host: /leyou
-    username: /leyou
-    password: leyou
-    host: 192.168.19.121
+    username: guest
+    password: guest
+    host: localhost
 eureka:
   client:
     service-url:
@@ -50,7 +49,7 @@ hystrix:
 leyou:
   jwt:
     cookieName: LY_TOKEN
-    pubKeyPath: G:\\tmp\\rsa\\rsa.pub # 公钥地址
+    pubKeyPath: /home/web/rsa.pub # 公钥地址
   filter:
     allowPaths:
        /api/auth
