--- a/goodsweb-dev.yml
+++ b/goodsweb-dev.yml
@@ -6,12 +6,11 @@ spring:
   thymeleaf:
     cache: false
   rabbitmq:
-    host: 192.168.19.121
-    username: /leyou
-    password: leyou
-    virtual-host: /leyou
+    host: localhost
+    username: guest
+    password: guest
   redis:
-    host: 192.168.19.121
+    host: localhost
 eureka:
   client:
     service-url:
