--- a/registry-dev.yml
+++ b/registry-dev.yml
@@ -4,10 +4,9 @@ spring:
   application:
     name: ly-registry
   rabbitmq:
-    virtual-host: /leyou
-    username: /leyou
-    password: leyou
-    host: 192.168.19.121
+    username: guest
+    password: guest
+    host: localhost
 eureka:
   client:
     fetch-registry: false
