--- a/search-dev.yml
+++ b/search-dev.yml
@@ -5,13 +5,12 @@ spring:
     name: search-service
   data:
     elasticsearch:
-      cluster-name: elasticsearch
-      cluster-nodes: 192.168.19.121:9300
+      #cluster-name: elasticsearch
+      cluster-nodes: localhost:9300
   rabbitmq:
-    virtual-host: /leyou
-    username: /leyou
-    password: leyou
-    host: 192.168.19.121
+    username: guest
+    password: guest
+    host: localhost
   jackson:
     default-property-inclusion: non_null # 配置json处理时忽略空值
   resources:
