--- a/sms-dev.yml
+++ b/sms-dev.yml
@@ -4,10 +4,9 @@ spring:
   application:
     name: sms-service
   rabbitmq:
-    virtual-host: /leyou
-    username: /leyou
-    password: leyou
-    host: 192.168.19.121
+    username: guest
+    password: guest
+    host: localhost
 
 leyou:
   sms:
