--- a/user-dev.yml
+++ b/user-dev.yml
@@ -11,19 +11,11 @@ spring:
       maximum-pool-size: 20
       minimum-idle: 10
   redis:
-    host: 192.168.19.121
+    host: localhost
   rabbitmq:
-    host: 192.168.19.121
-    username: /leyou
-    password: leyou
-    virtual-host: /leyou
-    template:
-      retry:
-        enabled: true
-        max-interval: 210000ms
-        initial-interval: 10000ms
-        multiplier: 2
-    publisher-confirms: true
+    host: localhost
+    username: guest
+    password: guest
 eureka:
   client:
     service-url:
