--- a/registry-dev.yml
+++ b/registry-dev.yml
@@ -13,6 +13,9 @@ eureka:
     fetch-registry: false
     service-url:
       defaultZone: http://127.0.0.1:10086/eureka/
+security:
+  basic:
+    enabled: false
   server:
     enable-self-preservation: false  #关闭自我保护
     eviction-interval-timer-in-ms: 5000 #每隔5秒进行一次服务列表清理
