--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -49,7 +49,7 @@ hystrix:
 leyou:
   jwt:
     cookieName: LY_TOKEN
-    pubKeyPath: /home/web/rsa.pub # 公钥地址
+    pubKeyPath: G:\tmp\rsa\rsa.pub # 公钥地址
   filter:
     allowPaths:
        /api/auth
