--- a/seckill-dev.yml
+++ b/seckill-dev.yml
@@ -12,7 +12,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/leyou?characterEncoding=UTF-8&useSSL=false
     username: root
-    password: 123456
+    password: root
     driver-class-name: com.mysql.jdbc.Driver
     hikari:
       maximum-pool-size: 20
@@ -64,4 +64,4 @@ hystrix:
 leyou:
   jwt:
     cookieName: LY_TOKEN
-    pubKeyPath: /home/web/rsa.pub # 公钥地址
+    pubKeyPath: G:\tmp\rsa\rsa.pub # 公钥地址
