--- a/test-dev.yml
+++ b/test-dev.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/leyou?characterEncoding=UTF-8&useSSL=false
     username: root
-    password: 123456
+    password: root
     hikari:
       maximum-pool-size: 20
       minimum-idle: 10
@@ -34,7 +34,7 @@ ip:
 leyou:
   jwt:
     cookieName: LY_TOKEN
-    pubKeyPath: /home/web/rsa.pub # 公钥地址
+    pubKeyPath: G:\tmp\rsa\rsa.pub # 公钥地址
   filter:
     allowPaths:
        /api/auth
