--- a/comments-dev.yml
+++ b/comments-dev.yml
@@ -8,7 +8,7 @@ spring:
   data:
     mongodb:
       host: localhost
-      database: leyoudb
+      database: admin
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/leyou?characterEncoding=UTF-8&useSSL=false
     username: root
