--- a/search-dev.yml
+++ b/search-dev.yml
@@ -5,7 +5,7 @@ spring:
     name: search-service
   data:
     elasticsearch:
-      #cluster-name: elasticsearch
+      cluster-name: elasticsearch
       cluster-nodes: localhost:9300
   rabbitmq:
     username: guest
