--- a/registry-dev.yml
+++ b/registry-dev.yml
@@ -13,6 +13,13 @@ eureka:
     fetch-registry: false
     service-url:
       defaultZone: http://127.0.0.1:10086/eureka/
+
+  instance:
+    prefer-ip-address: true
+    ip-address: 127.0.0.1
+    instance-id: ${eureka.instance.ip-address}.${server.port}
+    lease-renewal-interval-in-seconds: 5
+    lease-expiration-duration-in-seconds: 15
 security:
   basic:
     enabled: false
